--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
   animated_text_kit: ^4.2.2
+  icons_flutter: ^0.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
