--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   icons_flutter: ^0.0.4
   url_launcher: ^6.1.12
+  sizer: ^2.0.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
